sandbox/output
TicketDispenserTest.java:41: error: non-static method getNextTurnNumber() cannot be referenced from a static context
        when(TurnNumberSequence.getNextTurnNumber()).thenReturn(1);
                               ^
1 error
